# controllers/tripsController.js
@@ -55,6 +55,24 @@ const newTrip = async (req, res) => {
 
 }
 
+// #swagger.tags = ['Trips']
+// #swagger.description = 'Edit an existing trip by ID'
+// #swagger.parameters['trip'] = {
+//   in: 'body',
+//   description: 'Trip object with updated values',
+//   required: true,
+//   schema: {
+//     name: "Super Awesome Trip",
+//     startDate: "11/21/2027",
+//     endDate: "11/25/2027",
+//     parkList: ["Magic Kingdom", "Hollywood Studios"],
+//     hotel: "Animal Kingdom Lodge",
+//     budget: 5000,
+//     notes: "Book FastPasses in advance"
+//   }
+// }
+
+
 const editTrip = async (req, res) => {
 
   try {
